# otwartezabytki-converter

./: .gitignore  convert.py  download.sh  pyproject.toml
