[tool.poetry]
name = "otwartezabytki-converter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "otwartezabytki_converter"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
XlsxWriter = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
